trying to fix viewport issue on iOS

--- a/style/style.css
+++ b/style/style.css
@@ -23,7 +23,7 @@ body {
   min-width: 150px;
   align-self: stretch;
 }
-/*.polaroids > div {
+.polaroids > div {
   margin: 10px;
   flex: 1;
   min-width: 150px;
